Sat Sep 30 14:00:33 UTC 2006  Steve Huston  <shuston@riverace.com>

        * tests/Cached_Allocator_Test.cpp:
        * tests/Codecs_Test.cpp:
        * tests/Enum_Interfaces_Test.cpp:
        * tests/Get_Opt_Test.cpp (run_test):
        * tests/Naming_Test.cpp:
        * tests/Reactor_Notification_Queue_Test.cpp:
        * tests/Reference_Counted_Event_Handler_Test.cpp:
        * tests/Timer_Queue_Reference_Counting_Test.cpp:
          Correct logging format for wide-char build.

Fri Sep 29 18:54:29 UTC 2006  Steve Huston  <shuston@riverace.com>

	* ace/OS_NS_signal.inl (sigaction): In the !ACE_HAS_SIGACTION_CONSTP2
	  case, use ACE_SIGACTION instead of "struct sigaction" to pick up
	  the funky HP hack. Also see:
          Mon Jan 23 22:08:56 UTC 2006  Steve Huston  <shuston@riverace.com>

Fri Sep 29 10:00:04 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/Web_Crawler/Web_Crawler.mpc:
          Added avoids+=uses_wchar for borland and bmake, the Borland
          compiler gives a warning which can't be easily suppressed and
          by not building this project we do get a few new green builds

Thu Sep 28 19:37:13 UTC 2006  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * bin/diff-builds.pl:
          Fixed the finding of the nearest earlier build for a given date.

Thu Sep 28 16:53:14 UTC 2006  Shanshan Jiang <shanshan.jiang@vanderbilt.edu>

        * bin\MakeProjectCreator\config\ciao_executionmanager_stub.mpb
        * bin\MakeProjectCreator\config\ciao_plan_generator.mpb
        Added the base projects for executionmanager_stub and plan_generator.

Thu Sep 28 14:46:43 UTC 2006  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * bin/diff-builds.pl:

          Updated to fix temporary files creation. Now all those are put
          in the temporary files directory. Fixed the ability to compare
          just two dates.

Thu Sep 28 13:35:04 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-hpux-11.00.h: