@@ -1,3 +1,8 @@
+Mon Oct  2 11:26:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ace/Log_Msg.{h,cpp}:
+          Changed is_set_ conditional values member to bool
+
 Sat Sep 30 14:00:33 UTC 2006  Steve Huston  <shuston@riverace.com>
 
         * tests/Cached_Allocator_Test.cpp:
